feat(cli): robust cache wrapper with validation and env handling

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-# Redis Configuration
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_PASSWORD=
+# Redis Configuration (use REDIS_URL or individual vars)
+REDIS_URL=redis://localhost:6379/0
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_DB=0
+# REDIS_PASSWORD=
+
+# Optional timeouts (seconds)
+# REDIS_SOCKET_TIMEOUT=5.0
+# REDIS_SOCKET_CONNECT_TIMEOUT=2.0
