--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-# Redis Configuration (use REDIS_URL or individual vars)
 REDIS_URL=redis://localhost:6379/0
+# Optional: Individual connection settings
 # REDIS_HOST=localhost
 # REDIS_PORT=6379
-# REDIS_DB=0
 # REDIS_PASSWORD=
-
-# Optional timeouts (seconds)
-# REDIS_SOCKET_TIMEOUT=5.0
-# REDIS_SOCKET_CONNECT_TIMEOUT=2.0
+# REDIS_DB=0
+# REDIS_SOCKET_TIMEOUT=5
+# REDIS_SOCKET_CONNECT_TIMEOUT=5
